fix bottom safari bar overlap

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,14 @@
 @tailwind utilities;
 
 @layer base {
+	body {
+		height: 100%; /* Fallback */
+		height: -moz-available;
+		height: -webkit-fill-available;
+		height: fill-available;
+		height: stretch; /* Latest specification */
+	}
+
 	*::selection {
 		@apply bg-secondary text-primary;
 		opacity: 1;
